# florence

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
app/: api.py  main.py
app/core/: config.py
app/generation/: qa.py  rewriter.py
app/ingestion/: chunker.py  cleaner.py  embedder.py  indexer.py  loaders.py
app/retrieval/: retriever.py  store.py
app/schemas/: answers.py  retrieval.py
app/services/: ingestion_service.py
app/storage/: chroma_store.py
data/chroma/: chroma.sqlite3
data/raw/: doc2.txt  example.txt
data/raw/stubs/: doc1.txt
florence-ui/: index.html  package-lock.json  package.json  tsconfig.app.json
florence-ui/src/: App.tsx
tests/: test_api.py  test_ingestion.py  test_retriever.py
