[project]
name = "florence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "docx>=0.2.4",
    "fitz>=0.0.1.dev2",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pypdf>=6.8.0",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.3.0",
]
